# wasm-sample

./: package-lock.json
crate/: Cargo.toml
crate/js/: storage.js
crate/src/: browser_storage.rs  lib.rs
