[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Webpack project!"
license = "Apache-2.0/MIT"
name = "rust-webpack"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-webpack-template"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
plasma-client = { path="../../../cryptoeconomicslab/plasma-rust-framework/client" }

[dependencies.web-sys]
version = "0.3.5"
features = [
  'Window',
  'Storage',
]

[features]
default = ["console_error_panic_hook"]
